syntax = "proto3";

package pathwar.sso;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "pathwar.land/go/pkg/pwsso";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message ActionToken {
  google.protobuf.Timestamp iat = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true]; // Times of token validity
  google.protobuf.Timestamp exp = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true]; // Times of token validity
  string sub = 4;                                                                              // ID of the user
}

message Claims {
  string preferred_username = 1;
  string email = 2;
  bool email_verified = 3;
  string family_name = 4;
  string given_name = 5;

  ActionToken action_token = 100;
}
